Job Functionality added and Bugs resolved

--- a/SmartS Marketing Management/Views/Home/EverlyticView.cshtml
+++ b/SmartS Marketing Management/Views/Home/EverlyticView.cshtml
@@ -6,7 +6,7 @@
     <div>
         <div style="display: flex; justify-content: space-between;">
             <h4 style="text-align: left;">Everlytic Data</h4>
-            <label id="TxtErrorField" style="padding-top:9px" class="blinker"></label>
+            <label id="ExpErrorField" style="padding-top:9px" class="blinker"></label>
         </div>
         <p></p>
         <p></p>
