--- a/SmartS Marketing Management/Views/MiscellaneousSearch/ApplicationSearch.cshtml
+++ b/SmartS Marketing Management/Views/MiscellaneousSearch/ApplicationSearch.cshtml
@@ -72,6 +72,7 @@
                             <th>Profession</th>
                             <th>Heard About</th>
                             <th>Freezone Code</th>
+                            <th>Customer Type</th>
                             <th>BSC Code</th>
                             <th>TC Code</th>
                         </tr>
