--- a/SmartS Marketing Management/Views/UserManagment/LoginView.cshtml
+++ b/SmartS Marketing Management/Views/UserManagment/LoginView.cshtml
@@ -4,6 +4,9 @@
 
 <h2></h2>
 <br>
+<div style="float:left;"> 
+    <img src="~/Images/SmartSalemLogo.png" width="200" height="80">
+</div>
 <div class="login"> 
         <label>
             <b>
