Clear function Added and Bug Fixes

--- a/SmartS Marketing Management/Views/MiscellaneousSearch/ApplicationSearch.cshtml
+++ b/SmartS Marketing Management/Views/MiscellaneousSearch/ApplicationSearch.cshtml
@@ -51,7 +51,7 @@
                 </div>
                 <div style="padding-left: 20px; padding: 10px; text-align: end; position: absolute; margin-top:40Px; right: 50px; align-content: end">
                     <button class="btn btn-success" onclick="FetchAllApplicationData()"><span>Search</span></button>
-                    @*<button class="btn btn-success" onclick=""><span>Export To Excel</span></button>*@
+                    <button class="btn btn-danger" onclick="ClearDetails()"><span>Clear</span></button>
                 </div>
             </div> 
             <div class="container table-wrapper">
