--- a/SmartS Marketing Management/Views/Shared/_Layout.cshtml
+++ b/SmartS Marketing Management/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
                 <div style="display:flex">
                     <div class="navbar-collapse collapse" style="padding-top:15px">
                         <ul class="nav navbar-nav">
-                            <li>Welcome @Session["UserName"]</li>
+                            <li>Welcome @Session["Name"]</li>
                         </ul>
                     </div>
                     <div class="navbar-collapse collapse">
