--- a/SmartS Marketing Management/Views/BSCCode/BscUpdate.cshtml
+++ b/SmartS Marketing Management/Views/BSCCode/BscUpdate.cshtml
@@ -76,6 +76,8 @@
                             <option value="50">50</option>
                             <option value="70">70</option>
                             <option value="100">100</option>
+                            <option value="500">500</option>
+                            <option value="100">1000</option>
                         </select>
 
                     </div>
