--- a/SmartS Marketing Management/Views/JobFunction/JobFunction.cshtml
+++ b/SmartS Marketing Management/Views/JobFunction/JobFunction.cshtml
@@ -12,115 +12,124 @@
         <p></p>
         <p></p>
         <div>
-            <div style=" width:90%; display: grid; grid-template-columns: 1fr 1fr 1fr;">
-                <div style="grid-column: 1; text-align: left;">
+            <div class="container"  style="width:100%; display: flex; 
+                    grid-template-columns: 1fr 1fr 1fr;">
+                <div style="grid-column: 1; text-align: left; width: 35%; ">
                     <label style=" background-color: lightgray ">&nbsp;&nbsp;Add Job & Industry&nbsp;&nbsp; </label>
                 </div>
-                <div style="grid-column: 2; text-align: left; padding-left:12px">
+                <div style="grid-column: 2; text-align: left; width: 35%; ">
                     <label style="background-color: lightgray;">&nbsp;&nbsp;Map Job Function&nbsp;&nbsp;  </label>
                 </div>
-                <div style="grid-column: 3; text-align: center; padding-right:72px">
+                <div style="grid-column: 3; text-align: left; width: 30%; ">
                     <label style="background-color: lightgray;">&nbsp;&nbsp;Search Job&nbsp;&nbsp;  </label>
                 </div>
             </div>
 
-            <div class="container" style="border: 2px solid #E0E0E0; display: flex; justify-content: left; margin-top: -5px; background-color: lightgrey ">
-                <div style="padding-top :10px">
+            <div class="container" style="display: grid; grid-template-rows: auto">
+                <div style="grid-row:2 ;border: 2px solid #E0E0E0; display: flex;
+                        justify-content: left; margin-top: -5px; background-color: lightgrey;">
+                    <div style="display: flex; width:35%">
+                        <div style="padding-left: 50px; padding: 10px">
+                            <div>
+                                <label id="lbJobFunct" style="margin-right:10px">Job Function</label>
+                                <input type="text" id="txtJobFunc" name="JobFunc"><br><br>
+                            </div>
+                            <div style="margin-top:-5px">
+                                <label id="lbIndustry" style="margin-right:43px">Industry</label>
+                                <input type="text" id="txtIndustry" name="Industry"><br><br>
+                            </div>
+                            <div>
+                                <button class="btn btn-success" onclick=InsertJobfunctions()><span>Save</span></button>
+                            </div>
+                        </div>
+                    </div>
                     <div>
-                        <label id="lbJobFunct"  style="margin-right:10px">Job Function</label>
-                        <input type="text" id="txtJobFunc" name="JobFunc"><br><br>
+                        <div class="vertical" style="height:100%"></div>
                     </div>
-                    <div style="margin-top:-5px">
-                        <label id="lbIndustry" style="margin-right:43px">Industry</label>
-                        <input type="text" id="txtIndustry" name="Industry"><br><br>
-                    </div>
+                    <div style="display: flex; width:35%">
+                        <div style="padding-left:50px; padding:10px">
+                            <div>
+                                <label id="lbJobFunct" style="margin-right:10px">Job Title</label>
+                                <input type="text" id="txtTitle" name="txtTitle"><br><br>
+                            </div>
+                            <div style="margin-top:-5px">
+                                <label id="u_function" style="margin-right:8px">Function   </label>
+                                <select class="js-example-basic-single" id="ComboJobFunc" style="height: 25px; width: 185px;" name="Function">
+                                </select>
+                            </div>
+                            <div style="margin-top:15px">
+                                <label id="u_fbscode" style="margin-right:12px">Industry   </label>
+                                <select class="js-example-basic-single" id="ComboJobIndus" style="height: 25px; width: 185px;" name="Industry">
+                                </select>
+                            </div>
+                            <div style="margin-top:10px">
+                                <input type="checkbox" id="lbnewjobs" name="newcodes" onclick="NewJobSearch()" value="NewJobs" style="height:15px;width:15px;" />
+                                <label for="scales">Unmapped Jobs</label>
+                            </div>
+                        </div>
+                        <div style="padding-left:10px;padding:10px">
+                            <button class="btn btn-danger" onclick="InsertJobDetails()" style="background-color: #008996"><span>Update</span></button>
+                        </div>
+                        </div>
                     <div>
-                        <button class="btn btn-success" onclick=InsertJobfunctions()><span>Save</span></button>
+                       <div class="vertical" style="height:100%"></div>
                     </div>
-                </div> 
-                <div>
-                    <div class="vertical" style="height:100%"></div>
-                </div>
-                <div style="padding-left:50px; padding:10px">
-                    <div>
-                        <label id="lbJobFunct"  style="margin-right:10px">Job Title</label>
-                        <input type="text" id="txtTitle" name="txtTitle"><br><br>
+                    <div style="padding-left:10px;padding:10px; width:30%">
+                        <input type="text" id="txtSearchJob"
+                               placeholder="Search Job" />
+                        <button class="btn btn-success" onclick="SearchJobs()"><span>Search</span></button>
                     </div>
-                    <div  style="margin-top:-5px">
-                        <label id="u_function" style="margin-right:8px">Function   </label>
-                        <select class="js-example-basic-single" id="ComboJobFunc" style="height: 25px; width: 185px;" name="Function">
-                           
-                        </select>
-                    </div>
-                    <div style="margin-top:15px">
-                        <label id="u_fbscode" style="margin-right:12px">Industry   </label>
-                        <select class="js-example-basic-single" id="ComboJobIndus" style="height: 25px; width: 185px;" name="Industry">
-                        </select>
-                    </div>
-                    <div style="margin-top:10px">
-                        <input type="checkbox" id="lbnewjobs" name="newcodes" onclick="NewJobSearch()" value="NewJobs" style="height:15px;width:15px;" />
-                        <label for="scales">Unmapped Jobs</label>
-                    </div>
-                </div>
-                <div style="padding-left:10px;padding:10px">
-                    <button class="btn btn-danger" onclick="InsertJobDetails()" style="background-color: #008996"><span>Update</span></button>
-                </div>
-                <div>
-                    <div class="vertical" style="height:100%"></div>
-                </div>
-                <div style="padding-left:10px;padding:10px">
-                    <input type="text" id="txtSearchJob" onkeyup="SearchJobs()" placeholder="Search Job" />
                 </div>
             </div>
-            <div class="container">
-                <div class="form-group" style="padding-top:10px;height:100%">
-                    <!--		Show Numbers Of Rows 		-->
-                    <select class="form-control" style="width:auto" name="state" id="maxRows">
-                        <option value="5000">Show All</option>
-                        <option value="5">5</option>
-                        <option value="10">10</option>
-                        <option value="15">15</option>
-                        <option value="20">20</option>
-                        <option value="50">50</option>
-                        <option value="70">70</option>
-                        <option value="100">100</option>
-                    </select>
+                    <div class="container">
+                        <div class="form-group" style="padding-top:10px;height:100%">
+                            <!--		Show Numbers Of Rows 		-->
+                            <select class="form-control" style="width:auto" name="state" id="maxRows">
+                                <option value="5000">Show All</option>
+                                <option value="5">5</option>
+                                <option value="10">10</option>
+                                <option value="15">15</option>
+                                <option value="20">20</option>
+                                <option value="50">50</option>
+                                <option value="70">70</option>
+                                <option value="100">100</option>
+                            </select>
 
-                </div>
-                <div class="container table-wrapper">
-                    <table class="table table-striped table-class" id="tb_job_func"
-                           style="width: 100%; height: 100%; overflow-y: scroll; overflow-x:scroll">
-                        <thead>
-                            <tr>
-                                <th>Check</th>
-                                <th>Title</th>
-                                <th>Function</th>
-                                <th>Industry</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
-                    <div class="loader" id="JobBuffer"></div>
-                </div>
-                    <!--		Start Pagination -->
-                    <!--<div class='pagination-container'>
-        <nav>
-            <ul class="pagination">
+                        </div>
+                        <div class="container table-wrapper">
+                            <table class="table table-striped table-class" id="tb_job_func"
+                                   style="width: 100%; height: 100%; overflow-y: scroll; overflow-x:scroll">
+                                <thead>
+                                    <tr>
+                                        <th>Check</th>
+                                        <th>Title</th>
+                                        <th>Function</th>
+                                        <th>Industry</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                            <div class="loader" id="JobBuffer"></div>
+                        </div>
+                        <!--		Start Pagination -->
+                        <!--<div class='pagination-container'>
+            <nav>
+                <ul class="pagination">
 
-                <li data-page="prev">
-                    <span> < <span class="sr-only">(current)</span></span>
-                </li>-->
-                    <!--	Here the JS Function Will Add the Rows -->
-                    <!--<li data-page="next" id="prev">
-                        <span> > <span class="sr-only">(current)</span></span>
-                    </li>
-                </ul>
-            </nav>
-        </div>-->
+                    <li data-page="prev">
+                        <span> < <span class="sr-only">(current)</span></span>
+                    </li>-->
+                        <!--	Here the JS Function Will Add the Rows -->
+                        <!--<li data-page="next" id="prev">
+                            <span> > <span class="sr-only">(current)</span></span>
+                        </li>
+                    </ul>
+                </nav>
+            </div>-->
+                    </div>
                 </div>
             </div>
-    </div>
 
     <script>
         $(document).ready(function () {
