--- a/SmartS Marketing Management/Views/Shared/_Layout.cshtml
+++ b/SmartS Marketing Management/Views/Shared/_Layout.cshtml
@@ -53,7 +53,8 @@
                 </button>
                 <div class="dropdown-content_dr">
                     @Html.ActionLink("Everlytic Data", "EverlyticView", "Home")
-                </div>
+                    @Html.ActionLink("Data Analysis", "DataAnalysisView", "Home")
+                </div> 
             </div>
             <div class="dropdown_dr">
                 <button class="dropbtn_dr">
